admission/ValidatingAdmissionPolicy/policies/privileged/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-initcontainers
  annotations:
    kubeapt.io/uuid: "18974089-389e-468b-9e97-2bf549958687"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
