admission/ValidatingAdmissionPolicy/policies/privileged/initcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: initcontainer-privileged
  annotations:
    kubeapt.io/uuid: "18974089-389e-468b-9e97-2bf549958687"
    security.kubeapt.io/displayName: "Runs in Privileged Mode"
    security.kubeapt.io/description: "A privileged init container disables almost all container isolation and gets full root access to the node devices, kernel interfaces and filesystem, which is a direct path to node and cluster takeover."
    security.kubeapt.io/resource: "InitContainers"
    security.kubeapt.io/severity: "Critical"
    security.kubeapt.io/remediation: "Remove securityContext.privileged from every init container or set it to false. Field: spec.initContainers[*].securityContext.privileged."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      (has(object.spec.os) &&
       has(object.spec.os.name) &&
       object.spec.os.name.lowerAscii() == "windows") ||
      !has(object.spec.initContainers) || object.spec.initContainers.all(c,
        !has(c.securityContext) ||
        !has(c.securityContext.privileged) ||
        c.securityContext.privileged == false
      )
    message: |
      Privileged initContainers are disallowed. All spec.initContainers[*].securityContext.privileged must be undefined or false.
